# GoogleTestPipeline

./: CMakeLists.txt  Jenkinsfile  Makefile
include/: Factorial.h
src/: Factorial.cpp
tests/: FactorialTest.cpp
